--- a/composer.json
+++ b/composer.json
@@ -44,6 +44,12 @@
     },
     "scripts": {
         "post-autoload-dump": "@composer run prepare",
+        "clear": "@php vendor/bin/testbench package:purge-skeleton --ansi",
+        "prepare": "@php vendor/bin/testbench package:discover --ansi",
+        "build": [
+            "@composer run prepare",
+            "@php vendor/bin/testbench workbench:build --ansi"
+        ],
         "start": [
             "Composer\\Config::disableProcessTimeout",
             "@composer run build",
